-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1000 2011-05-02 19:34:31 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-02	pwessel
	* gmt_init.c:		FORMAT_FLOAT_OUT can now be used to set column-specific
				formats using comma-separated <cols>:<format> specifications.
				The last format without leading <cols>: overrides the default
				format for all unspecified columns.
				The -h[i|o][<n>] option now works for binary files where <n>
				is interpreted to be the number of bytes to skip/pad.

2011-05-02	remko
	* gmt_init.c:		Fixed problems with custom page size.
	* pslib.c:		Removed incorrect increase count of clipping when placing
				curved labels.

2011-05-01	pwessel
	* job03.sh:		Replaced complicated awk scripting with gmtmath to ensure
				we get the common sampling range which changed by a tad
				due to the bug in project.
	* gmt_init.c:		New -b syntax to allow for mixed-type records on i/o.
	* gmt_io.c:		New binary i/o processing to allow separate types for each column.

2011-05-01	remko
	* test/grdview/icelandbox.sh:	New test case based on query by Peter Schmidt.
	* scripts/*.sh:		Replaced ". functions.sh" by ". ./functions.sh" to avoid problems
				with people who do not have . in their PATH. E.g., Ubuntu.
	* gmt_io.h:		Removed define GMT_native_binary
	* gmt_common.h:		Removed common.b.netcdf and put common.b.varnames under GMT_COMPAT
	* gmt_io.c, gmt_init.c:	Option -bic no longer refers to netCDF files. -bic?varnames still
				allowed for backwards compatibility; use file?varnames instead.
				NetCDF table file automatically recognised.

2011-04-29	remko
	* job04*.sh:		Made ex 4 and 4c more similar and rotated color bar.
	* grdview_func.c:	Removed grdview_init_setup because it produces unexpected results.

2011-04-28	remko
	* grdview_func.c:	Removed grdview_init_setup because it yields unpredictable